--- a/.github/workflows/auto-dev-orbit.yml
+++ b/.github/workflows/auto-dev-orbit.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install requests PyYAML python-docx PyPDF2
+          pip install -r requirements.txt
 
       - name: Run Blueprint Validation
         env:
@@ -45,4 +45,4 @@ jobs:
 
       - name: Post Results to Jules
         run: |
-          curl -X POST "https://api.jules.dev/v1/logs"             -H "Authorization: Bearer ${{ secrets.JULES_API_KEY }}"             -H "Content-Type: application/json"             -d '{"status": "completed", "message": "✅ Auto-Dev Orbit run finished successfully."}'
+          curl -X POST "https://api.jules.dev/v1/logs"             -H "Authorization: Bearer ${{ secrets.JULES_API_KEY }}"             -H "Content-Type: application/json"             -d '{"status": "completed", "message": "Auto-Dev Orbit run finished successfully."}'
