Add MCP server config and update VSCode settings
Introduces .vscode/mcp.json to configure the io.github.upstash/context7 MCP server with API key input. Updates .vscode/settings.json to include server sampling configuration for the new MCP server.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "chatgpt.openOnStartup": true,
-    "chatgpt.commentCodeLensEnabled": true
+    "chatgpt.commentCodeLensEnabled": true,
+    "chat.mcp.serverSampling": {
+        "namo-hub-1/.vscode/mcp.json: io.github.upstash/context7": {
+            "allowedModels": []
+        }
+    }
 }
