--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,10 @@
         "namo-hub-1/.vscode/mcp.json: io.github.upstash/context7": {
             "allowedModels": []
         }
-    }
+    },
+    "python.testing.pytestArgs": [
+        "Workflows"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
