--- a/.github/workflows/auto-dev-orbit.yml
+++ b/.github/workflows/auto-dev-orbit.yml
@@ -14,10 +14,10 @@ jobs:
 
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@v4 # v4.3.1
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v5 # v5.6.0
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
